Imager release history.  Older releases can be found in Changes.old

Imager 0.78 - unreleased
===========

 - add each library-directory/pkgconfig/ to the pkg-config search path
   in Imager::Probe.
   Thanks to Justin Davis.
   https://rt.cpan.org/Ticket/Display.html?id=60491

 - moved the GIF file handling code into a sub-module in preparation
   for separate distribution.
   https://rt.cpan.org/Ticket/Display.html?id=49616 (partial)

Bug fixes:

 - Imager::Probe was calling ExtUtils::Liblist to initialize
   LD_RUN_PATH supplying an undefined value rather than the found
   directory.  Thanks to Justin Davis.
   https://rt.cpan.org/Ticket/Display.html?id=60491

Imager 0.77 - 11 Aug 2010
===========

I don't want Imager::File::PNG indexed as part of Imager, but forgot
to update the META.yml before updating the version.

 - don't index Imager::File::PNG as part of Imager

 - add resources to META.yml

Imager 0.76 - not released
===========

Bug fixes:

 - the align_string() method would ignore a string of "0" due to a
   mis-use of C< ||= >.
   Thanks to Maurice Height for reporting this.
   https://rt.cpan.org/Ticket/Display.html?id=60199

Imager 0.75_03 - 09 Aug 2010
==============

Bug fixes:

 - read_types() and write_types() would include png when it wasn't
   available due to a problem with the %formats tie

 - handle dependent libraries correctly (eg -lpng requiring -lz) in
   the code run phase of library probing.

Imager 0.75_02 - 07 Aug 2010
==============

Bug fixes:

 - add file missing from MANIFEST, which was causing TIFF failures.

Imager 0.75_01 - 06 Aug 2010
==============

Test release for the new PNG probe.

 - added the ability to read multiple-image PNM files.
   Note that unlike the pbm/pgm/ppm specification this accepts mixed
   format files and allows white space padding between files.
   Thanks to Philip Gwyn (Leolo) for this patch.

 - moved the PNG file handling code into a sub-module in preparation
   for separate distribution.